# ask-question-gm-back

./: .env.template  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg.template
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 2025_05_05_1852-28b03c546f2e_initial_commit.py
src/: main.py  manage.py
src/api/: question_view.py
src/core/: logger.py  settings.py
src/db/: postgres.py
src/exceptions/: service_exceptions.py
src/models/: __init__.py  base.py  mixins.py  question.py  user.py
src/query_params/: __init__.py  base_filter.py  paginator.py  question_fiflter.py
src/schemas/: base_schema.py
src/services/: base_service.py  question_service.py
src/utils/: file_utils.py  filter_utils.py  password.py
