[tool.poetry]
name = "ask-question-gm-back"
version = "0.1.0"
description = ""
authors = ["Tony Illarionov <Illarionov.Ant@gmail.com>"]
readme = "README.md"
packages = [{include = "ask_question_gm_back"}]

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.115.12"
pydantic-settings = "2.9.1"
uvicorn = "0.34.2"
gunicorn = "23.0.0"
typer = "0.15.3"
werkzeug = "3.1.3"
alembic = "1.15.2"
alembic-postgresql-enum = "1.7.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.40"}
psycopg2-binary = "2.9.10"
asyncpg = "0.30.0"
openpyxl = "3.1.5"
orjson = "3.10.18"
loguru = "0.7.3"
python-multipart = "0.0.20"


[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip = '**/migrations/*,**/migrations/'